syntax = "proto3";

package userpb;

import "userpb/message.proto";

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserSubscriptionPlan(GetUserSubscriptionPlanRequest) returns (GetUserSubscriptionPlanResponse) {}
}

// GET USER BY ID

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}


// GET USER BY EMAIL

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

// CREATE USER

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string id = 1;
}

// GET USER SUBSCRIPTION PLAN

message GetUserSubscriptionPlanRequest {
  string id = 1;
}

message GetUserSubscriptionPlanResponse {
  string plan = 1;
}